Modifications to about section. Added work section.

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html class="layout-home">
-    
+
     <head>
         <meta charset="utf-8">
         <title>Corrib Digital dot com</title>
@@ -36,7 +36,7 @@
                 <div class="digital">Digital</div>
             </div>
         </nav>
-        
+
         <section class="section-1 section-intro">
             <div class="text-wrapper">
                 <div id="typed-strings">
@@ -44,11 +44,58 @@
                 </div>
                 <span id="typed"></span>
             </div>
+            <div class="scroll-down">
+                <img src="images/arrow-down.png" class="down-arrow" />
+            </div>
         </section>
 
-        <div class="scroll-down">
-            <img src="images/arrow-down.png" class="down-arrow" />
-        </div>
+        <section class="section-2 section-about">
+          <div class="section-header">
+            <h1>About Me</h1>
+          </div>
+          <div class="profile-container">
+            <img src="images/profile.jpg" class="profile-image" />
+          </div>
+          <div class="about-paragraph">
+            <h3>My name is Michael and I’m a 19 year old web designer and 2nd year
+            Computer Science student. I am co-host of the 99% podcast and self
+            proclaimed technology enthuisiast.</h3>
+          </div>
+          <div class="skills-container">
+            <div class="skills-wrap">
+              <div class="skill ux-skill">
+                <div class="skill-text">UX Design</div>
+                <div class="skill-bar"><div class="ux-skill-bar"></div></div>
+              </div>
+              <div class="skill graphics-skill">
+                <div class="skill-text">Graphics Design</div>
+                <div class="skill-bar"><div class="graphics-skill-bar"></div></div>
+              </div>
+            </div>
+            <div class="skills-wrap">
+              <div class="skill programming-skill">
+                <div class="skill-text">Programming</div>
+                <div class="skill-bar"><div class="programming-skill-bar"></div></div>
+              </div>
+              <div class="skill web-skill">
+                <div class="skill-text">Web Development</div>
+                <div class="skill-bar"><div class="ux-skill-bar"></div></div>
+              </div>
+            </div>
+          </div>
+          <a href="" class="link-button-wrap"><div class="link-button">Read More About Me</div></a>
+        </section>
+
+        <section class="section-3 section-work">
+          <div class="section-header">
+            <h1>Work</h1>
+          </div>
+          <div class="images-wrap">
+            <img src="images/style_by_anna.jpg" class="work-image-small" />
+            <img src="images/99pshow.jpg" class="work-image-large" id="pshow-image" />
+            <img src="images/thegalwaytherapist.jpg" class="work-image-small" id="galwaytherapist-image" />
+          </div>
+        </section>
     </body>
 
 </html>
